--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,21 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>msproduct</name>
 	<description>msproduct</description>
-
+	 
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Hoxton.SR6</spring-cloud.version>
 	</properties>
-
+	
 	<dependencies>
+	   
+  
+   		 <dependency>
+        	<groupId>io.springfox</groupId>
+        	<artifactId>springfox-boot-starter</artifactId>
+        	<version>3.0.0</version>
+   		 </dependency>
+   		   
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
