--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,10 @@
 	</properties>
 	
 	<dependencies>
-	   
-  
+		 <dependency>
+			  <groupId>org.hibernate.validator</groupId>
+			  <artifactId>hibernate-validator</artifactId>
+			</dependency>
    		 <dependency>
         	<groupId>io.springfox</groupId>
         	<artifactId>springfox-boot-starter</artifactId>
